# conflog

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: main.py
backend/myproject/: settings.py
backend/services/: pdf_generator.py  qr_generator.py
frontend/: package.json
src/: main.py
src/services/: pdf_generator.py
