[project]
name = "conflog"
version = "0.0.1"
description = ""
authors = [
    {name = "The ConFlog Authors", email = "contact@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "reportlab (>=4.4.2,<5.0.0)",
    "qrcode (>=8.2,<9.0)",
    "django (>=5.2.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
